--- a/README
+++ b/README
@@ -25,10 +25,11 @@ GCC 4.8.5 or higher
 -----------
 Tools Used:
 -----------
-1. tensorflow == 1.13.1
-1. keras-rl (any should be fine)
-2. gym == 0.17.1
-3. aimmu-sim (in-house)
+1. tensorflow == 2.13.1
+2. keras == 2.13.1
+3. keras-rl2 == 1.0.5
+4. gym == 0.17.1
+5. aimmu-sim (in-house)
 
 -----------------------------
 Setup suggestions/directions:
